--- a/notebooks/FIP_RCA_SKU.ipynb
+++ b/notebooks/FIP_RCA_SKU.ipynb
@@ -15,16 +15,14 @@
   {
    "cell_type": "markdown",
    "id": "a5d3b6d5-9d72-4f5e-a5b6-10bf19fb47bd",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Dataset Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "42b545f3-c489-46e0-8cc3-bb06791d0a6d",
    "metadata": {},
    "outputs": [
@@ -222,7 +220,7 @@
        "4                   PHARMA        friday    2025-12-05  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +251,7 @@
     ")\n",
     "\n",
     "df_fip = table.to_pandas()\n",
-    "df_fip.head()"
+    "#df_fip.head()"
    ]
   },
   {
@@ -324,16 +322,14 @@
   {
    "cell_type": "markdown",
    "id": "cfe055ce-26b4-4a86-9090-6878863394c9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Data Prep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "d2f9b248-42d0-415e-9f57-473547a438d1",
    "metadata": {},
    "outputs": [],
@@ -353,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "6ee4b04f-0c9b-4a2b-8658-f40b167b2b98",
    "metadata": {},
    "outputs": [
@@ -370,7 +366,7 @@
        "(92589, 19)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "7937341f-fb66-4c8d-96a6-053c67c62c27",
    "metadata": {},
    "outputs": [
@@ -491,7 +487,7 @@
        "347624        friday    2026-01-30         2026-01-16"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "36fb3fdb-8d6e-468e-a247-c1718679ffb5",
    "metadata": {},
    "outputs": [],
@@ -752,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "403488a1-7e84-486d-ace7-211df04ab55d",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "cb968f72-c330-400a-a167-bfc8f17a3105",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "1ab5c897-0e8f-4f5d-99f0-4b2d4df03c75",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "94a01ac7-d678-4d7f-af72-49fb03b8e926",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1177,7 @@
        "(93764, 26)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "id": "0ae63a29-c8ab-4116-80d2-409932d754f1",
    "metadata": {},
    "outputs": [],
@@ -1698,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "26954a97-123c-41a7-aaf5-264b0d64094b",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1907,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1956,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "1c64e023-f07d-4279-895e-58bfaacaa3f2",
    "metadata": {},
    "outputs": [],
@@ -1970,27 +1966,28 @@
     "    [\"material\", \"plant\", \"snapshot_date\"]\n",
     ")\n",
     "\n",
-    "#  1) Business materiality (value-based)\n",
-    "# Relative impact vs prior FIP\n",
+    "#  1) Business materiality (value-based)   \n",
+    "# How big the change is in value terms, relative to prior fip.\n",
     "final_rca_frame[\"relative_fip_impact\"] = (\n",
     "    final_rca_frame[\"total_fip_change\"].abs() /\n",
     "    final_rca_frame[\"total_cost_prev\"]\n",
     ")\n",
     "\n",
-    "# 2) Historical volatility (material–plant aware) \n",
+    "# 2) Historical volatility (material–plant aware) -- exclude current date?\n",
     "\n",
-    "#Quantity volatility (rolling, 12 snapshots)\n",
+    "# Quantity volatility (rolling, 12 snapshots) - How noisy this SKU normally is.\n",
     "final_rca_frame[\"quantity_volatility_12w\"] = (\n",
     "    final_rca_frame\n",
     "    .groupby([\"material\", \"plant\"])[\"delta_quantity_pct\"]\n",
-    "    .transform(lambda x: x.rolling(12, min_periods=6).std())\n",
+    "    .transform(lambda x: x.shift(1).rolling(12, min_periods=6).std())\n",
     ")\n",
     "\n",
-    "#Cost volatility (rolling, 12 snapshots)\n",
+    "\n",
+    "# Cost volatility (rolling, 12 snapshots)\n",
     "final_rca_frame[\"cost_volatility_12w\"] = (\n",
     "    final_rca_frame\n",
     "    .groupby([\"material\", \"plant\"])[\"delta_cost_per_unit_pct\"]\n",
-    "    .transform(lambda x: x.rolling(12, min_periods=6).std())\n",
+    "    .transform(lambda x: x.shift(1).rolling(12, min_periods=6).std())\n",
     ")\n",
     "\n",
     "# 3) Normalized (volatility-aware) changes\n",
@@ -2012,16 +2009,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "39106156-e708-4414-80f8-a17679550e8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4) Temporal persistence (directional consistency)\n",
+    "# 4) Temporal persistence (directional consistency)\n",
     "\n",
     "final_rca_frame[\"quantity_change_sign\"] = np.sign(\n",
     "    final_rca_frame[\"delta_quantity_pct\"]\n",
     ") \n",
+    "\n",
     "def persistence_score(series):\n",
     "    score = []\n",
     "    current = 0\n",
@@ -2041,12 +2039,13 @@
     "    final_rca_frame\n",
     "    .groupby([\"material\", \"plant\"])[\"quantity_change_sign\"]\n",
     "    .transform(persistence_score)\n",
-    ")\n"
+    ")\n",
+    "# add cost difference as well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "5643d56c-7994-4ec2-924b-d6da813cbdf3",
    "metadata": {},
    "outputs": [],
@@ -2065,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "f9fea059-f4b7-4f55-985c-4eaa73978cd3",
    "metadata": {},
    "outputs": [],
@@ -2075,7 +2074,7 @@
     "final_rca_frame[\"rolling_avg_quantity_12w\"] = (\n",
     "    final_rca_frame\n",
     "    .groupby([\"material\", \"plant\"])[\"delta_quantity_pct\"]\n",
-    "    .transform(lambda x: x.rolling(12, min_periods=6).mean())\n",
+    "    .transform(lambda x: x.shift(1).rolling(12, min_periods=6).mean())\n",
     ")\n",
     "\n",
     "final_rca_frame[\"change_point_detected\"] = (\n",
@@ -2087,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "12ab09ee-fd11-488c-a37a-63171760bdb4",
    "metadata": {},
    "outputs": [],
@@ -2109,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "8e6a961e-f95f-4745-bc25-b2ac0b834644",
    "metadata": {},
    "outputs": [
@@ -2322,7 +2321,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,8 +2332,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "id": "b57d2877-2e81-4bff-b352-bf557be62fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['material', 'plant', 'date', 'quantity_curr', 'total_cost_curr',\n",
+       "       'concost_source', 'unit_of_measure', 'cost_per_unit_curr', 'source',\n",
+       "       'corporate_brand', 'material_type', 'development_lifecycle_status',\n",
+       "       'enterprise_category', 'enterprise_sub_category', 'dosage_form_parent',\n",
+       "       'corp_brand_id', 'network_or_business_unit', 'snapshot_type',\n",
+       "       'snapshot_date', 'prev_snapshot_date', 'snapshot_date_prev',\n",
+       "       'quantity_prev', 'cost_per_unit_prev', 'total_cost_prev',\n",
+       "       'is_new_in_current_snapshot', 'is_dropped_in_current_snapshot',\n",
+       "       'delta_quantity', 'delta_cost_per_unit', 'quantity_impact',\n",
+       "       'cost_impact', 'interaction_impact', 'total_fip_change',\n",
+       "       'delta_quantity_pct', 'delta_cost_per_unit_pct',\n",
+       "       'quantity_impact_pct_of_total', 'cost_impact_pct_of_total',\n",
+       "       'interaction_pct', 'relative_fip_impact', 'quantity_volatility_12w',\n",
+       "       'cost_volatility_12w', 'normalized_quantity_change',\n",
+       "       'normalized_cost_change', 'quantity_change_sign',\n",
+       "       'quantity_persistence_score', 'quantity_zscore', 'is_quantity_outlier',\n",
+       "       'rolling_avg_quantity_12w', 'change_point_detected', 'is_noise',\n",
+       "       'is_signal'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rca_frame.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "0cee1582-e421-431f-8ef4-e01bd84d9e0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'[' was never closed (3173363256.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[47], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    v = final_rca_frame[final_rca_frame[corporate_brand=='REVLIMID']\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m '[' was never closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = final_rca_frame[[final_rca_frame[corporate_brand=='REVLIMID']]\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2357399-e9e5-4a38-aa3e-d967a1e742e8",
    "metadata": {},
    "outputs": [],
    "source": []
