FIP all brands year wise V1

--- a/notebooks/FIP_RCA_AllBrands.ipynb
+++ b/notebooks/FIP_RCA_AllBrands.ipynb
@@ -3415,11 +3415,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "70a10768-8ead-4bf2-ae51-059a96674fac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(67680, 111)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df.shape"
+   ]
   },
   {
    "cell_type": "code",
