FIP all brands fix 1

--- a/notebooks/FIP_RCA_AllBrands.ipynb
+++ b/notebooks/FIP_RCA_AllBrands.ipynb
@@ -242,7 +242,7 @@
     "\n",
     "table = dataset.to_table(\n",
     "    filter=(   \n",
-    "        (ds.field(\"date\") == \"202812\") &                    # filter only 2026 YE FIP data\n",
+    "        (ds.field(\"date\") == \"202612\") &                    # filter only 2026 YE FIP data\n",
     "        ~(\n",
     "            (ds.field(\"snapshot_date\") == \"2026-01-23\") &\n",
     "            (ds.field(\"snapshot_type\") == \"friday\")         # drop 23rd Fri snapshot data to avoid double counting\n",
@@ -983,32 +983,32 @@
     }
    ],
    "source": [
-    "# Flags for material-plant presence / absence between snapshots\n",
+    "# Flags for material–plant presence \n",
     "\n",
-    "# Not present in previous snapshot \n",
+    "# 1. Identify NEW in current snapshot\n",
+    "# Present now, but not present in previous snapshot\n",
     "rca_base[\"is_new_in_current_snapshot\"] = (\n",
     "    rca_base[\"prev_snapshot_date\"].notna() &\n",
     "    rca_base[\"quantity_prev\"].isna()\n",
     ")\n",
     "\n",
-    "# Present in previous but missing in current snapshot\n",
-    "rca_base[\"is_new_in_current_snapshot\"] = False\n",
     "\n",
+    "# 2. Identify DROPPED in current snapshot\n",
+    "# Present in previous snapshot but missing in current snapshot\n",
     "\n",
-    "# Identify valid previous snapshots (from calendar logic)\n",
+    "# Identify valid previous snapshots (calendar-safe)\n",
     "valid_prev_snapshots = (\n",
     "    snapshot_calendar[\"prev_snapshot_date\"]\n",
     "        .dropna()\n",
     "        .unique()\n",
     ")\n",
     "\n",
-    "# Restrict previous_df BEFORE the anti-join\n",
+    "# Restrict previous snapshot data to valid transitions\n",
     "previous_df_valid = previous_df[\n",
     "    previous_df[\"snapshot_date_prev\"].isin(valid_prev_snapshots)\n",
     "]\n",
     "\n",
-    "# Present in previous but missing in current snapshot\n",
-    "# Identify rows present in previous snapshot but missing in current\n",
+    "# Anti-join: rows present in previous but missing in current\n",
     "prev_only = previous_df_valid.merge(\n",
     "    current_df[\n",
     "        [\n",
@@ -1037,47 +1037,36 @@
     "    indicator=True\n",
     ").query(\"_merge == 'left_only'\")\n",
     "\n",
-    "\n",
+    "# Mark dropped rows\n",
     "prev_only[\"is_dropped_in_current_snapshot\"] = True\n",
     "\n",
-    "# Add missing columns for consistency\n",
+    "# Ensure column alignment for concat\n",
     "for col in rca_base.columns:\n",
     "    if col not in prev_only.columns:\n",
     "        prev_only[col] = np.nan\n",
     "\n",
+    "# Current snapshot rows are NOT dropped\n",
     "rca_base[\"is_dropped_in_current_snapshot\"] = False\n",
+    "\n",
+    "\n",
+    "# 3. Combine current + dropped rows\n",
     "\n",
     "final_rca_frame = pd.concat(\n",
     "    [rca_base, prev_only[rca_base.columns]],\n",
     "    ignore_index=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "1ab5c897-0e8f-4f5d-99f0-4b2d4df03c75",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_98339/1465783820.py:8: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  .fillna(False)                  # handle NaNs\n"
-     ]
-    }
-   ],
-   "source": [
+    ")\n",
+    "\n",
+    "# 4. Normalize boolean flags\n",
+    "\n",
     "for col in [\n",
     "    \"is_new_in_current_snapshot\",\n",
     "    \"is_dropped_in_current_snapshot\",\n",
     "]:\n",
     "    final_rca_frame[col] = (\n",
     "        final_rca_frame[col]\n",
-    "            .replace({1: True, 0: False})   # normalize numeric bools\n",
-    "            .fillna(False)                  # handle NaNs\n",
-    "            .astype(\"boolean\")              # now safe\n",
+    "            .replace({1: True, 0: False})\n",
+    "            .fillna(False)\n",
+    "            .astype(\"boolean\")\n",
     "    )\n"
    ]
   },
@@ -1840,12 +1829,12 @@
     "# 3) history_confidence\n",
     "final_rca_frame[\"history_confidence\"] = (\n",
     "    final_rca_frame[\"history_weeks_count\"] / 12\n",
-    ").clip(upper=1.0)\n",
+    ").clip(upper=1.0)                                       # check\n",
     "\n",
     "\n",
     "# 4) sku_presence_class\n",
     "conditions = [\n",
-    "    final_rca_frame[\"is_new_in_current_snapshot\"] == True,\n",
+    "    final_rca_frame[\"is_new_in_current_snapshot\"] == True,  \n",
     "    final_rca_frame[\"is_dropped_in_current_snapshot\"] == True,\n",
     "    (\n",
     "        (final_rca_frame[\"quantity_prev\"] == 0) &\n",
@@ -1859,8 +1848,8 @@
     "]\n",
     "\n",
     "choices = [\n",
-    "    \"INTRO\",\n",
-    "    \"PHASEOUT\",\n",
+    "    \"ENTERED\",\n",
+    "    \"OUT\",\n",
     "    \"REACTIVATED\",\n",
     "    \"STABLE\"\n",
     "]\n",
@@ -1879,7 +1868,7 @@
     "\n",
     "final_rca_frame[\"unit_of_measure_prev\"] = (\n",
     "    final_rca_frame\n",
-    "    .groupby([\"material\", \"plant\"])[\"unit_of_measure\"]\n",
+    "    .groupby([\"material\", \"plant\"])[\"base_unit_of_measure\"]\n",
     "    .shift(1)\n",
     ")\n",
     "\n",
@@ -2434,10 +2423,7 @@
     "    (~final_rca_frame[\"duplicate_sku_plant_flag\"]) &\n",
     "\n",
     "    # must not be lifecycle noise\n",
-    "    (final_rca_frame[\"sku_presence_class\"] == \"STABLE\") &\n",
-    "\n",
-    "    # must have enough history\n",
-    "    (final_rca_frame[\"has_sufficient_6periods\"])\n",
+    "    (final_rca_frame[\"sku_presence_class\"] == \"STABLE\")\n",
     ")\n",
     "\n",
     "final_rca_frame[\"is_noise_governed\"] = (\n",
@@ -2460,12 +2446,8 @@
     "final_rca_frame.loc[\n",
     "    final_rca_frame[\"sku_presence_class\"] != \"STABLE\",\n",
     "    \"noise_reason\"\n",
-    "] = \"LIFECYCLE_OR_ERRATIC\"\n",
+    "] = \"ERRATIC\"\n",
     "\n",
-    "final_rca_frame.loc[\n",
-    "    ~final_rca_frame[\"has_sufficient_6periods\"],\n",
-    "    \"noise_reason\"\n",
-    "] = \"INSUFFICIENT_HISTORY\"\n",
     "\n",
     "final_rca_frame.loc[\n",
     "    final_rca_frame[\"noise_reason\"].isna() &\n",
