FIP agg file output_v2

--- a/notebooks/FIP_RCA_BrandLevelAgg.ipynb
+++ b/notebooks/FIP_RCA_BrandLevelAgg.ipynb
@@ -2614,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 177,
    "id": "954c4209-6c10-40fd-9b13-4adc06d69ae0",
    "metadata": {},
    "outputs": [],
@@ -2670,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 178,
    "id": "92cbe60a-01b2-4d94-9e74-62f8a414bfe5",
    "metadata": {},
    "outputs": [],
@@ -2705,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 179,
    "id": "f08b3511-e84f-447b-91f8-38ee0a0ef36a",
    "metadata": {},
    "outputs": [],
@@ -2725,7 +2725,7 @@
     ")\n",
     "\n",
     "brand_df[\"Impact_from_Signal_%\"] = (\n",
-    "    brand_df[\"Signal_Impact\"] / brand_df[\"Brand_ΔFIP\"].abs()\n",
+    "    brand_df[\"Signal_Impact\"] / brand_df[\"Brand_Abs_Impact\"]\n",
     ")\n",
     "\n",
     "brand_df[\"Qty_Impact_%\"] = (\n",
@@ -2744,14 +2744,16 @@
     "    brand_df[\"Driver_Conflict_Count\"] / brand_df[\"Signal_SKUs\"]\n",
     ")\n",
     "\n",
-    "brand_df[\"Structural_Shift_Index\"] = (\n",
-    "    brand_df[\"Structural_CP_Count\"] / brand_df[\"Signal_SKUs\"]\n",
+    "brand_df[\"Structural_Shift_Index\"] = np.where(\n",
+    "    brand_df[\"Signal_SKUs\"] > 0,\n",
+    "    brand_df[\"Structural_CP_Count\"] / brand_df[\"Signal_SKUs\"],\n",
+    "    np.nan\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 180,
    "id": "c47fc0aa-0d91-49f1-8794-7f4385629004",
    "metadata": {},
    "outputs": [],
@@ -2771,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 181,
    "id": "615fd62d-4e2b-4df2-baa4-64ebe79b2a5c",
    "metadata": {},
    "outputs": [
@@ -2984,7 +2986,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3003,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 182,
    "id": "42668637-c3ea-4e43-9812-f808dbd6b027",
    "metadata": {},
    "outputs": [],
@@ -3039,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 183,
    "id": "ec887271-66b2-45d4-b1b5-ec5ba1b38610",
    "metadata": {},
    "outputs": [],
@@ -3055,7 +3057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 184,
    "id": "899d10e3-0ecc-4707-9fb7-71e54c5cbba9",
    "metadata": {},
    "outputs": [],
@@ -3076,7 +3078,7 @@
     "\n",
     "brand_mt_df[\"Impact_from_Signal_%\"] = (\n",
     "    brand_mt_df[\"Signal_Impact\"] /\n",
-    "    brand_mt_df[\"Brand_MT_ΔFIP\"].abs()\n",
+    "    brand_mt_df[\"Brand_MT_Abs_Impact\"]\n",
     ")\n",
     "\n",
     "brand_mt_df[\"Qty_Impact_%\"] = (\n",
@@ -3097,13 +3099,14 @@
     "    brand_mt_df[\"Signal_SKUs\"]\n",
     ")\n",
     "\n",
-    "brand_mt_df[\"Structural_Shift_Index\"] = (\n",
-    "    brand_mt_df[\"Structural_CP_Count\"] /\n",
-    "    brand_mt_df[\"Signal_SKUs\"]\n",
+    "brand_mt_df[\"Structural_Shift_Index\"] = np.where(\n",
+    "    brand_mt_df[\"Signal_SKUs\"] > 0,\n",
+    "    brand_mt_df[\"Structural_CP_Count\"] / brand_mt_df[\"Signal_SKUs\"],\n",
+    "    np.nan\n",
     ")\n",
     "\n",
-    "# 🔑 ProductType metric\n",
-    "brand_mt_df[\"ProductType_Impact_%\"] = (\n",
+    "# MaterialType metric\n",
+    "brand_mt_df[\"MaterialType_Impact_%\"] = (\n",
     "    brand_mt_df[\"Brand_MT_ΔFIP\"] /\n",
     "    brand_mt_df[\"Brand_ΔFIP\"]\n",
     ")\n"
@@ -3111,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 185,
    "id": "89201443-4fa2-49d5-8852-13904e2a8310",
    "metadata": {},
    "outputs": [],
@@ -3132,7 +3135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 186,
    "id": "3a1f31da-798f-4e8a-9937-8fb7b4df3b05",
    "metadata": {},
    "outputs": [],
@@ -3181,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 187,
    "id": "e5414156-65c8-4821-9846-c3950b42fe65",
    "metadata": {},
    "outputs": [],
@@ -3213,13 +3216,13 @@
     ")\n",
     "\n",
     "brand_df[\"Top_5_SKU_%\"] = (\n",
-    "    brand_df[\"Top5_SKU_Impact\"] / brand_df[\"Brand_ΔFIP\"].abs()\n",
+    "    brand_df[\"Top5_SKU_Impact\"] / brand_df[\"Brand_Abs_Impact\"]\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 188,
    "id": "e329ca05-69dc-42cf-9133-54388b0dcadb",
    "metadata": {},
    "outputs": [],
@@ -3245,7 +3248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 189,
    "id": "315f841c-18dc-478b-b506-a59cf8bf712e",
    "metadata": {},
    "outputs": [],
@@ -3257,13 +3260,13 @@
     ")\n",
     "\n",
     "brand_mt_df[\"Top_5_SKU_%\"] = (\n",
-    "    brand_mt_df[\"Top5_SKU_Impact\"] / brand_mt_df[\"Brand_MT_ΔFIP\"].abs()\n",
+    "    brand_mt_df[\"Top5_SKU_Impact\"] / brand_mt_df[\"Brand_MT_Abs_Impact\"]\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 190,
    "id": "e5d5b982-cfcd-49b8-ae85-59317fb98b71",
    "metadata": {},
    "outputs": [],
@@ -3287,7 +3290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 191,
    "id": "b933900c-69d2-4bf4-9704-198e4a26edaa",
    "metadata": {},
    "outputs": [],
@@ -3307,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 192,
    "id": "d4a7f623-cc70-4c6d-9d56-beb8be74d0ff",
    "metadata": {},
    "outputs": [],
@@ -3331,7 +3334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 193,
    "id": "167104d7-fe0f-4848-8c23-013ef5cfcde5",
    "metadata": {},
    "outputs": [],
@@ -3351,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 194,
    "id": "58538858-a627-45db-8ccd-958db3bf0f97",
    "metadata": {},
    "outputs": [],
@@ -3369,7 +3372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 195,
    "id": "d61c218d-e4af-47cb-af39-cee1e51c8576",
    "metadata": {},
    "outputs": [],
@@ -3395,7 +3398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "id": "6b05b395-a293-4c2a-9e8d-844e5258131d",
    "metadata": {},
    "outputs": [],
@@ -3428,7 +3431,7 @@
     "        \"Driver_Conflict_%\",\n",
     "        \"Avg_Persistence\",\n",
     "        \"Structural_Shift_Index\",\n",
-    "        \"ProductType_Impact_%\",\n",
+    "        \"MaterialType_Impact_%\",\n",
     "        \"Actionability_Index\",\n",
     "        \"Ownership_Clarity_Index\",\n",
     "        \"Explainability_Score\",\n",
@@ -3438,7 +3441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "id": "e719e146-d0e0-44fe-af76-d8b40928f7db",
    "metadata": {},
    "outputs": [],
@@ -3454,7 +3457,7 @@
     "    \"Cost_Impact_%\",\n",
     "    \"Driver_Conflict_%\",\n",
     "    \"Structural_Shift_Index\",\n",
-    "    \"ProductType_Impact_%\",\n",
+    "    \"MaterialType_Impact_%\",\n",
     "    \"Actionability_Index\",\n",
     "    \"Ownership_Clarity_Index\",\n",
     "    \"Explainability_Score\",\n",
@@ -3483,7 +3486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "id": "0d558e1e-a978-408d-9233-0d818ef101b7",
    "metadata": {},
    "outputs": [
@@ -3525,7 +3528,7 @@
        "      <th>Driver_Conflict_%</th>\n",
        "      <th>Avg_Persistence</th>\n",
        "      <th>Structural_Shift_Index</th>\n",
-       "      <th>ProductType_Impact_%</th>\n",
+       "      <th>MaterialType_Impact_%</th>\n",
        "      <th>Actionability_Index</th>\n",
        "      <th>Ownership_Clarity_Index</th>\n",
        "      <th>Explainability_Score</th>\n",
@@ -3600,9 +3603,9 @@
        "      <td>1.14</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.99</td>\n",
-       "      <td>53.32</td>\n",
+       "      <td>22.59</td>\n",
        "      <td>100.00</td>\n",
-       "      <td>81.10</td>\n",
+       "      <td>60.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>553</th>\n",
@@ -3624,9 +3627,9 @@
        "      <td>1.75</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.08</td>\n",
-       "      <td>5.75</td>\n",
+       "      <td>3.82</td>\n",
        "      <td>82.07</td>\n",
-       "      <td>64.30</td>\n",
+       "      <td>55.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>554</th>\n",
@@ -3686,24 +3689,24 @@
        "553             100.00             1.75                     0.0   \n",
        "554              14.29             0.38                     0.0   \n",
        "\n",
-       "     ProductType_Impact_%  Actionability_Index  Ownership_Clarity_Index  \\\n",
-       "550                  0.00                81.95                   100.00   \n",
-       "551                  0.00                65.93                   100.00   \n",
-       "552                 -0.99                53.32                   100.00   \n",
-       "553                 -0.08                 5.75                    82.07   \n",
-       "554              40726.43                 0.69                   100.00   \n",
+       "     MaterialType_Impact_%  Actionability_Index  Ownership_Clarity_Index  \\\n",
+       "550                   0.00                81.95                   100.00   \n",
+       "551                   0.00                65.93                   100.00   \n",
+       "552                  -0.99                22.59                   100.00   \n",
+       "553                  -0.08                 3.82                    82.07   \n",
+       "554               40726.43                 0.69                   100.00   \n",
        "\n",
        "     Explainability_Score  \n",
        "550                 72.78  \n",
        "551                 76.25  \n",
-       "552                 81.10  \n",
-       "553                 64.30  \n",
+       "552                 60.10  \n",
+       "553                 55.32  \n",
        "554                 76.25  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3714,24 +3717,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 199,
    "id": "702339a9-2d84-48fa-8c4f-6d2e83745295",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['corporate_brand', 'material_type', 'level', 'date', 'snapshot_date',\n",
-       "       'Brand_ΔFIP_%', 'Brand_Abs_Impact', 'Brand_MT_Abs_Impact',\n",
-       "       'Net_vs_Abs_Ratio', 'Signal_SKU_%', 'Impact_from_Signal_%',\n",
-       "       'Top_5_SKU_%', 'Plant_Concentration_%', 'Qty_Impact_%', 'Cost_Impact_%',\n",
-       "       'Weighted_Dominance', 'Driver_Conflict_%', 'Avg_Persistence',\n",
-       "       'Structural_Shift_Index', 'ProductType_Impact_%', 'Actionability_Index',\n",
+       "Index(['corp_brand_id', 'corporate_brand', 'material_type', 'level', 'date',\n",
+       "       'snapshot_date', 'Brand_ΔFIP_%', 'Brand_Abs_Impact',\n",
+       "       'Brand_MT_Abs_Impact', 'Net_vs_Abs_Ratio', 'Signal_SKU_%',\n",
+       "       'Impact_from_Signal_%', 'Top_5_SKU_%', 'Plant_Concentration_%',\n",
+       "       'Qty_Impact_%', 'Cost_Impact_%', 'Weighted_Dominance',\n",
+       "       'Driver_Conflict_%', 'Avg_Persistence', 'Structural_Shift_Index',\n",
+       "       'MaterialType_Impact_%', 'Actionability_Index',\n",
        "       'Ownership_Clarity_Index', 'Explainability_Score'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3742,7 +3746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 205,
    "id": "af3f3495-14a9-44c1-b8e6-6ae3f78018c5",
    "metadata": {},
    "outputs": [],
@@ -3752,8 +3756,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "1e5a449f-191e-4eb4-adca-ca5244b47897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27.27"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_agg_df['Structural_Shift_Index'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "abfbcfce-ed34-4cad-af00-1acdfc7be064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>corporate_brand</th>\n",
+       "      <th>material_type</th>\n",
+       "      <th>level</th>\n",
+       "      <th>Brand_ΔFIP_%</th>\n",
+       "      <th>Top_5_SKU_%</th>\n",
+       "      <th>Impact_from_Signal_%</th>\n",
+       "      <th>Explainability_Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>REVLIMID</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BRAND</td>\n",
+       "      <td>2360.90</td>\n",
+       "      <td>99.43</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>74.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>REVLIMID</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>BRAND_MATERIAL_TYPE</td>\n",
+       "      <td>33.13</td>\n",
+       "      <td>49.53</td>\n",
+       "      <td>35.80</td>\n",
+       "      <td>54.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>REVLIMID</td>\n",
+       "      <td>HALB</td>\n",
+       "      <td>BRAND_MATERIAL_TYPE</td>\n",
+       "      <td>99.91</td>\n",
+       "      <td>99.95</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>75.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>REVLIMID</td>\n",
+       "      <td>PACK</td>\n",
+       "      <td>BRAND_MATERIAL_TYPE</td>\n",
+       "      <td>-79.19</td>\n",
+       "      <td>67.54</td>\n",
+       "      <td>88.12</td>\n",
+       "      <td>62.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>REVLIMID</td>\n",
+       "      <td>RAW</td>\n",
+       "      <td>BRAND_MATERIAL_TYPE</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>80.42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    corporate_brand material_type                level  Brand_ΔFIP_%  \\\n",
+       "90         REVLIMID           NaN                BRAND       2360.90   \n",
+       "447        REVLIMID           FIN  BRAND_MATERIAL_TYPE         33.13   \n",
+       "480        REVLIMID          HALB  BRAND_MATERIAL_TYPE         99.91   \n",
+       "513        REVLIMID          PACK  BRAND_MATERIAL_TYPE        -79.19   \n",
+       "546        REVLIMID           RAW  BRAND_MATERIAL_TYPE        100.00   \n",
+       "\n",
+       "     Top_5_SKU_%  Impact_from_Signal_%  Explainability_Score  \n",
+       "90         99.43                  0.51                 74.90  \n",
+       "447        49.53                 35.80                 54.72  \n",
+       "480        99.95                  0.24                 75.50  \n",
+       "513        67.54                 88.12                 62.56  \n",
+       "546       100.00                100.00                 80.42  "
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_agg_df.loc[\n",
+    "    (final_agg_df[\"corporate_brand\"] == \"REVLIMID\") &\n",
+    "    (final_agg_df[\"snapshot_date\"] == \"2025-12-12\"),\n",
+    "    [\n",
+    "        \"corporate_brand\",\n",
+    "        \"material_type\",\n",
+    "        \"level\",\n",
+    "        \"Brand_ΔFIP_%\",\n",
+    "        \"Top_5_SKU_%\",\n",
+    "        \"Impact_from_Signal_%\",\n",
+    "        \"Explainability_Score\",\n",
+    "    ]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a2096a7-bb4d-4e00-a364-8cbf1a8a581d",
    "metadata": {},
    "outputs": [],
    "source": []
